fdo#35784 minimal fix

Fake DatabaseMetaData::getImportedKeys: we can get away with not giving column names if we give zero data rows